--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,21 @@
-<h1 align="center">Todo List</h1>
-<app-create-todo></app-create-todo>
-<app-todo-list></app-todo-list>
 
-<router-outlet></router-outlet>
+<!-- <app-todo-list></app-todo-list> -->
+<nav class="form-row justify-content-center text-center">
+    <a
+      routerLink="/board"
+      routerLinkActive="active"
+      type="button"
+      class="btn-lg btn-block btn-primary"
+      >Todo List</a
+    >
+    <a
+      routerLink="/table"
+      routerLinkActive="active"
+      type="button"
+      class="btn-lg btn-block btn-secondary"
+      >Todo Table
+    </a>
+  </nav>
+  <br />
+  
+  <router-outlet></router-outlet>
