correctly working ToDoList

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 
 <!-- <app-todo-list></app-todo-list> -->
+<!-- <app-board></app-board> -->
 <nav class="form-row justify-content-center text-center">
     <a
       routerLink="/board"
